 * XML schema supports multiple schedule elements but processor does not
 * DailyTimeIntervalTriggerPersistenceDelegate does not handle empty time interval properly
 * DailyTimeIntervalScheduleBuilder.EndingDailyAfterCount(...) doesn't pass validation
 * trace throwing exception
 * bug in QuartzSchedulerThread.GetRandomizedIdleWaitTime()
 
MISC

* Performance improvements, including improvements to some select statements in AdoJobStore


Thanks to our vibrant community actively helping on mailing list and reportings issues and creating pull requests.


Release 2.1.2, Jan 13, 2013
--------------------------------

This is a maintenance release that fixes .NET 4.5 requirement for 4.0 DLLs caused by ilmerge process

Release 2.1.1, Jan 5, 2013
--------------------------------

This is a maintenance release that adds strong naming back to Quartz.NET assemblies.


Release 2.1, Dec 31, 2012
--------------------------------

This release contains important bug fixes, new functionality and minor breaking changes.
Custom IJobFactory implementations now need to implement new method void ReturnJob(IJob job) for container managed cleanup.
NthIncludedDayTrigger was removed as it was accidentally left behind even though being legacy and replaced by DailyTimeIntervalTrigger.

NEW FEATURES

* TimeZone support for calendars / Andrew Smith
* Allow scheduling relative to replaced trigger with XML configuration
* Add method to IJobFactory to destroy a job instance created by the factory breaking / minor breaking, added new required method
* Internalize C5 dependency
* Support for Oracle ODP 11.2 Release 4
* Upgrade SQLite dependency to version 1.0.83
* Upgrade to Common.Logging 2.1.2

FIXES

* Scheduled Shutdown blocked even if waitForJobsToComplete is false
* DailyTimeIntervalTriggerImpl should be serializable
* InstanceID = "AUTO" may cause "String or binary data would be truncated" error on qrtz_fired_triggers.entry_id
* PlugInExample doesn't execute any jobs